Fixed spacing

--- a/src/style/header.css
+++ b/src/style/header.css
@@ -100,6 +100,12 @@ body .header .title {
   color: #FFFFFF;
   font-size: 24px;
   gap: 11px;
+  transition: 0.4s gap;
+}
+
+body .header .title:has(.project-name.updating),
+body .header.tabs-expanded .title {
+  gap: 0;
 }
 
 @media screen and (max-width: 1330px) {
